--- a/templates/upload_cv_confirmed.html
+++ b/templates/upload_cv_confirmed.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title %} Upload your CV {% endblock %}
 {% block body %}
-    <div id="upload_cv">
+    <div id="upload_cv_confirmed">
 
         <h1>Hello, {{ candidate.name }} <a class="not_me" href="/clear_all">That’s not me</a></h1>
 
