Pad all CVs link

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,8 +38,8 @@
             {% endfor %}
         </div>
 
-        <p>
-            <a id="all_cvs_link" href="/all_cvs/page/1">Browse all CVs&hellip;</a>
+        <p id="all_cvs_link">
+            <a href="/all_cvs/page/1">Browse all CVs&hellip;</a>
         </p>
 
     </div>
