--- a/static/style.css
+++ b/static/style.css
@@ -175,7 +175,11 @@ img.ratio   {display:block;width:100%;height:auto;padding-bottom:5%;}
     margin-bottom: 32px;
 }
 
-#all_cvs_link, #ynmp_link a {
+#all_cvs_link {
+    margin-top: 20px;
+}
+
+#all_cvs_link a, #ynmp_link a {
     font-size: 20px;
 }
 #ynmp_link {
