--- a/templates/tweet_candidates.html
+++ b/templates/tweet_candidates.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %} Email candidates {% endblock %}
+{% block title %} Tweet candidates {% endblock %}
 {% block wide %}
 
     <div id="tweet_candidates">
