--- a/static/style.css
+++ b/static/style.css
@@ -76,7 +76,7 @@ footer ul.pull-right li:last-child {
     color: #bbb;
 }
 
-.candidates .frame_outer_wrapper {
+.candidates .thumb {
     margin-top: 6px;
 }
 
@@ -158,8 +158,31 @@ footer ul.pull-right li:last-child {
 
 /* /show_cv and / and /all_cvs*/
 
+body, html {
+  height:100%;
+}
+
 /* See http://stackoverflow.com/a/12121929/284340 */
-html,body        {height:100%;}
+.thumb img {
+  width: 100%;
+  height: auto;
+  margin: auto;
+  box-sizing: content-box;
+  border: 5px solid #fff;
+}
+
+.thumb .thumbimg:hover {
+  border: 5px solid #18BC9C;
+}
+
+.thumb {
+  margin-bottom: 18px;
+}
+
+.thumb iframe {
+  height: 200%;
+}
+
 .frame_outer_wrapper   {width:100%;height:100%;background:#CCC;}
 .frame_inner_wrapper        {position:relative;}
 .frame_inner_wrapper .ratio {display:block;width:100%;height:auto;}
