--- a/templates/upload_cv.html
+++ b/templates/upload_cv.html
@@ -23,7 +23,7 @@
         <p>This site helps MP candidates share their CV with voters.
         </p>
 
-        <p>You can check out your own candidates! Visit the <a href="/">home page</a>.
+        <p>You can help get your own candidates! Visit the <a href="/">home page</a> and enter your postcode.
         </p>
 
     </div>
