--- a/templates/show_cv.html
+++ b/templates/show_cv.html
@@ -32,7 +32,12 @@
           </div>
 
           <div class="navbar-brand">
-             {{ candidate.name }}'s CV
+             <span class="visible-lg-block visible-md-block hidden-sm hidden-xs">
+                {{ candidate.name }}'s CV, {{ candidate.constituency_name }}, MP Candidate
+             </span>
+             <span class="hidden-lg hidden-md visible-sm-block visible-xs-block">
+                {{ candidate.name }}'s CV
+             </span>
           </div>
 
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-main">
@@ -46,13 +51,10 @@
 
           <p class="navbar-text">
              <span class="visible-lg-block visible-md-block hidden-sm hidden-xs">
-                MP Candidate, 
-                {{ candidate.constituency_name }},
                 {{ candidate.party }}
              </span>
              <span class="hidden-lg hidden-md visible-sm-block visible-xs-block">
-                {{ candidate.constituency_name }},
-                {{ candidate.party }}
+                {{ candidate.constituency_name }}, MP Candidate, {{ candidate.party }}
              </span>
           </p>
 
