--- a/templates/about.html
+++ b/templates/about.html
@@ -26,15 +26,6 @@
         <p>To be helpful to voters, so they can choose the best candidate.
         </p>
 
-        <p>These articles give further motivation:
-        </p>
-        
-        <ul>
-            <li><a href="http://www.theguardian.com/politics/2015/feb/28/ethics-chief-tell-voters-about-your-second-jobs-general-election-lord-bew-malcolm-rifkind-jack-straw">MP ethics chief: tell voters about your second jobs</a></li>
-            <li><a href="http://news.bbc.co.uk/1/hi/uk_politics/8583859.stm">MP hopefuls urged to declare interests</a></li>
-            <li><a href="https://www.gov.uk/advertise-job">Advertise a job with Universal Jobmatch</a></li>
-        </ul>
-
         <h2>What is a CV?</h2>
 
         {% include 'this_is_a_cv.html' %}
@@ -42,28 +33,19 @@
         <h2>What's the long term aim?</h2>
 
         <p>Ultimately, we'd like the public to be more involved in the
-        recruitment of MPs in lots of ways. We're not going to prejudge
-        what people are looking for - the CV is just the start.
+        recruitment of MPs in lots of ways. The CV is just the start.
+        The main <a href="http://democracyclub.org.uk/">Democracy Club</a>
+        site has more.
         </p>
 
         <h2>Who's behind this site?</h2>
 
-        <p>Julian Todd had the <a href="http://www.theguardian.com/politics/blog/2010/may/04/general-election-2010">original idea</a>
-        back in 2010. He got it from his <a href="https://electionleaflets.org/">election leaflets project</a>.
+        <p>The <a href="http://www.theguardian.com/politics/blog/2010/may/04/general-election-2010">original idea</a> was Julian Todd's.
+        <a href="http://flourish.org/">Francis Irving</a> made it, helped by
+        <a href="http://treadsoft.ly/">Andy Lulham</a> and <a href="https://github.com/frabcus/mpcv/graphs/contributors">others</a>.
+        It's part of the non-profit <a href="https://democracyclub.org.uk/about/">Democracy Club</a>.
         </p>
-
-        <p><a href="http://flourish.org/">Francis Irving</a> made the site &mdash;
-        he <a href="http://www.flourish.org/2015/03/why-im-collecting-every-mp-candidates-cv/">explains why</a> 
-        on his blog. He built a large part of the original TheyWorkForYou,
-        back in the day. <a href="http://treadsoft.ly/">Andy Lulham</a> has contributed lots of 
-        code. And energy.
-        </p>
-
-        <p>
-        The flotilla of volunteers at <a href="https://democracyclub.org.uk/about/">Democracy Club</a>
-        help develop and maintain it, and provide infrastructure.
-        </p>
-
+        
         <h2>How can I help?</h2>
 
         <p>If you'd like to help market this site, or handle customer support,
