Add media contact number

--- a/templates/about.html
+++ b/templates/about.html
@@ -62,8 +62,12 @@
 
 {% block sidebar %}
     <h2>Contact us</h2>
-    <p class="lead">You can email <a href="mailto:cv@democracyclub.org.uk">cv@democracyclub.org.uk</a>
+    <p class="lead"><a href="mailto:cv@democracyclub.org.uk">cv@democracyclub.org.uk</a>
+
+    <h2>Media queries</h2>
+
+    <p class=lead">07970 543358</p>
 
     <h2>Source code</h2>
-    <p class="lead"> <a href="https://github.com/frabcus/mpcv">Github repostitory</a></p>
+    <p class="lead"> <a href="https://github.com/frabcus/mpcv">frabcus/mpcv</a></p>
 {% endblock  %}
