--- a/templates/candidates.html
+++ b/templates/candidates.html
@@ -26,7 +26,7 @@
                     <div class="col-xs-12 col-md-6">
                         <span class="whole_name">
                             <span class="name">{{ candidate.name}}</span> <span class="party">{{ candidate.party}}</span>
-                            (<a href="/upload_cv/{{ candidate.id }}" class="this_is_me">this is me</a>){% if not loop.last %},{% endif %}
+                            (<a href="/upload_cv/{{ candidate.id }}" class="this_is_me">this is me</a>)
                         </span>
                     </div>
                     {% endfor %}
@@ -76,7 +76,7 @@
                     {% for candidate in candidates_no_email %}
                         <div class="col-xs-12 col-md-6">
                             <span class="whole_name">
-                                <span class="name">{{ candidate.name}}</span> <span class="party">{{ candidate.party}}</span>{% if not loop.last %},{% endif %}
+                                <span class="name">{{ candidate.name}}</span> <span class="party">{{ candidate.party}}</span>
                             </span>
                         </div>
                     {% endfor %}
