Cope with nav wrapping
Related to https://github.com/frabcus/mpcv/issues/49

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,7 +2,7 @@
 
 {% block allbody %}
 <body>
-    <div class="navbar navbar-default navbar-fixed-top">
+    <div class="navbar navbar-default navbar-fixed-top" id="topnavbar">
       <div class="container">
         <div class="navbar-header">
           <a href="/" class="navbar-brand">
