--- a/templates/show_cv.html
+++ b/templates/show_cv.html
@@ -18,7 +18,7 @@
    {% endwith %}
 
 
-    <div class="navbar navbar-default navbar-fixed-top show-cv-navbar">
+   <div class="navbar navbar-default navbar-fixed-top show-cv-navbar" id="topnavbar">
       <div class="container">
         <div class="navbar-header">
 
