--- a/static/style.css
+++ b/static/style.css
@@ -3,13 +3,20 @@
 .navbar-brand > img {
     position: relative;
     top: -20px;
-    padding-right: 1em;
+    padding-right: 19px;
     float: left;
 } 
 
-@media (max-width: 768px) { 
+@media (max-width: 384px) {
   .navbar-brand {
       padding-right: 0;
+  }
+  .navbar-brand img {
+      padding-right: 10px;
+      width: 30px;
+      height: 30px;
+      top: -6px;
+      box-sizing: content-box;
   }
 }
 
