"More candidates" goes back to where were

--- a/templates/show_cv.html
+++ b/templates/show_cv.html
@@ -24,10 +24,10 @@
 
           <div class="pull-left">
              <span class="visible-lg-block visible-md-block hidden-sm hidden-xs">
-                <a href="/candidates" class="btn btn-success"><i class="glyphicon glyphicon-arrow-left"></i> More candidates</a>
+                <a href="{{ more_link }}" class="btn btn-success"><i class="glyphicon glyphicon-arrow-left"></i> More candidates</a>
              </span>
              <span class="hidden-lg hidden-md visible-sm-block visible-xs-block">
-                <a href="/candidates" class="btn btn-success"><i class="glyphicon glyphicon-arrow-left"></i></a>
+                <a href="{{ more_link }}" class="btn btn-success"><i class="glyphicon glyphicon-arrow-left"></i></a>
              </span>
           </div>
 
