--- a/templates/show_cv.html
+++ b/templates/show_cv.html
@@ -26,8 +26,11 @@
              <span class="visible-lg-block visible-md-block hidden-sm hidden-xs">
                 <a href="{{ more_link }}" class="btn btn-success"><i class="glyphicon glyphicon-arrow-left"></i> More candidates</a>
              </span>
-             <span class="hidden-lg hidden-md visible-sm-block visible-xs-block">
+             <span class="hidden-lg hidden-md visible-sm-block hidden-xs">
                 <a href="{{ more_link }}" class="btn btn-success"><i class="glyphicon glyphicon-arrow-left"></i></a>
+             </span>
+             <span class="hidden-lg hidden-md hidden-sm visible-xs-block">
+                <a href="{{ more_link }}" class="btn-sm btn btn-success"><i class="glyphicon glyphicon-arrow-left"></i></a>
              </span>
           </div>
 
