Remove placeholder from subscribe form
Doesn't work on some browsers, so makes interface less clear.

--- a/static/style.css
+++ b/static/style.css
@@ -102,7 +102,7 @@ footer ul.pull-right li:last-child {
     white-space: nowrap;
 }
 
-.candidates .btn {
+.candidates .contact-ask {
     margin-top: 6px;
 }
 
