--- a/templates/candidates.html
+++ b/templates/candidates.html
@@ -34,10 +34,10 @@
             </p>
 
             <p>
-                <a href="/email_candidates" class="btn btn-lg btn-success">Ask them by email</a>
+                <a href="/email_candidates" class="contact-ask btn btn-lg btn-success">Ask them by email</a>
                 {% if show_twitter_button %}
                 &nbsp;
-                <a href="/tweet_candidates" class="btn btn-lg btn-info">Ask them by Twitter</a>
+                <a href="/tweet_candidates" class="contact-ask btn btn-lg btn-info">Ask them by Twitter</a>
                 {% endif %}
             </p>
         {% endif %}
