--- a/templates/email_candidates.html
+++ b/templates/email_candidates.html
@@ -40,10 +40,10 @@
                     <p class="form-control-static dear-message">Dear {{ names_list }},</p>
                     <textarea id="message" name="message" class="form-control" rows=10 autofocus>{{ message }}</textarea>
                     <p class="help-block visible-lg-block visible-md-block hidden-sm hidden-xs">
-                        Want some ideas for your letter? See the top tips to the right.
+                        Want some ideas for your letter? See the tips to the right.
                     </p>
                     <p class="help-block hidden-lg hidden-md visible-sm-block visible-xs-block">
-                        Want some ideas for your letter? See the top tips below.
+                        Want some ideas for your letter? See the tips below.
                     </p>
 
                 </div>
