Don't close links

--- a/templates/bumf.html
+++ b/templates/bumf.html
@@ -20,7 +20,7 @@
             "bootstrap/bootswatch.min.css",
             "style.css"
         %}
-            <link href="{{ ASSET_URL }}" rel="stylesheet"></link>
+            <link href="{{ ASSET_URL }}" rel="stylesheet">
         {% endassets %}
 
         {% assets filters="cssmin", output="gen/packed.js",
