--- a/static/style.css
+++ b/static/style.css
@@ -51,6 +51,10 @@ footer ul.pull-right li:last-child {
     margin-bottom: 0px;
 }
 
+.alert .glyphicon {
+    top: 2px;
+    margin-right: 4px;
+}
 
 /* / */
 
@@ -132,7 +136,7 @@ footer ul.pull-right li:last-child {
 }
 
 #upload_cv_confirmed form {
-  margin-bottom: 2em;
+  margin-bottom: 36px;
 }
 
 .not_me {
