--- a/templates/show_cv.html
+++ b/templates/show_cv.html
@@ -10,7 +10,13 @@
           </div>
           <div class="col-xs-8">
             {% for category, message in messages %}
-              <div class="top-alert alert alert-{{ category }}">{{ message }}</div>
+               <div class="top-alert alert alert-{{ category }}">
+                  {% if category == 'danger' %} <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> {% endif %}
+                  {% if category == 'success' %} <span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span> {% endif %}
+                  {% if category == 'warning' %} <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span> {% endif %}
+                  {% if category == 'info' %} <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> {% endif %}
+                  {{ message }}
+               </div>
             {% endfor %}
           {% endif %}
           </div>
